Added likes and dislikes for reviews